<resources>
    <string name="app_name">CalculatorKotlin</string>
    <string name="divide">\u00F7</string>
    <string name="multiple">\u00D7</string>
    <string name="dot">\u2219</string>
    <string name="percent">%</string>
    <string name="change_sign">+/-</string>
    <string name="all_clear">AC</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="equals">=</string>
    <string name="warn_point_was">Вы уже вводите дробное значение</string>
    <string name="warn_wrong_input">Нельзя вычислить данное выражение</string>
</resources>